# Teresa

./: .gitignore  6.6.0  BetaQT.py  LICENSE  QT.py  README.md  Teresa.py  Teresa.spec  TeresaBeta.py  TeresaBeta.spec  TeresaLinux.py  TeresaLinux.sh  TeresaQT.py  TeresaQT.spec  TeresaV2.py  TeresaV2_HistoryUI.py  TeresaV2_UI.py  TeresaV2_Utils.py  about_dialog.py  ai_provider.py  config.py  example.ini  features.py  index.html  launch.py  main_window.py  modern_ui.py  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  run.bat  settings_dialog.py  tailwind.config.js  test_system.py  user_data.db
.github/workflows/: release.yml
LifeTool/: bmiGUI.py  bmiplus.py  eletric.py  eletricGUI.py  lucky.py  luckyGUI.py  mainGUI.py  ping.py  pingGUI.py  translong.py  translongGUI.py  twobit.py  twobitGUI.py
QTUI/: dialog.ui  tabwidget.ui
history/: conversation_history.json  conversations.db  conversations.json
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Chat.tsx  LifeTool.tsx  Settings.tsx
src/utils/: api.ts  configStore.ts  tools.ts
web_app/: app.py
